--- a/sv_fitting.ipynb
+++ b/sv_fitting.ipynb
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "7ba03dc3",
    "metadata": {},
    "outputs": [],
@@ -965,9 +965,9 @@
     "ratio_biax = data_biax['biaxial']/data_biax['RD']\n",
     "\n",
     "for strain_rate in strain_rates:\n",
-    "    data_RD = pd.read_csv(f'extended_curve/Tmp{ref_temp}K_StrRt{strain_rate}_RD')\n",
-    "    data_DD = pd.read_csv(f'extended_curve/Tmp{ref_temp}K_StrRt{strain_rate}_DD')\n",
-    "    data_TD = pd.read_csv(f'extended_curve/Tmp{ref_temp}K_StrRt{strain_rate}_TD')\n",
+    "    data_RD = pd.read_csv(f'extended_curve/Tmp{ref_temp}K_StrRt{strain_rate}_RD.csv')\n",
+    "    data_DD = pd.read_csv(f'extended_curve/Tmp{ref_temp}K_StrRt{strain_rate}_DD.csv')\n",
+    "    data_TD = pd.read_csv(f'extended_curve/Tmp{ref_temp}K_StrRt{strain_rate}_TD.csv')\n",
     "    r = pd.read_csv(f'extended_r/R_values_StrainRate_{strain_rate}.csv')\n",
     "    \n",
     "    #RD-DD and RD-TD ratio\n",
@@ -976,7 +976,7 @@
     "    #Generate TD, DD, biaxial for all conditions\n",
     "    for temp in temps:\n",
     "        #Read in RD data\n",
-    "        temp_RD = pd.read_csv(f'extended_curve/Tmp{temp}K_StrRt{strain_rate}_RD')['Stress']\n",
+    "        temp_RD = pd.read_csv(f'extended_curve/Tmp{temp}K_StrRt{strain_rate}_RD.csv')['Stress']\n",
     "        \n",
     "        df = pd.DataFrame({\n",
     "        'strain': data_RD['Strain'],\n",
