--- a/strain_rate_calibration/strain_fit.ipynb
+++ b/strain_rate_calibration/strain_fit.ipynb
@@ -24,46 +24,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref_temp = '298.15'\n",
+    "def organise_data_normalized(strain_rates, temps):\n",
+    "    ref_temp = '298.15'\n",
+    "    \n",
+    "    # Loop over each temperature\n",
+    "    for temp in temps:\n",
+    "        df = None  # Initialize df to None to handle it dynamically for each temperature\n",
+    "        \n",
+    "        for strain_rate in strain_rates:\n",
+    "            # Load reference stress data at 298.15 K for the given strain rate\n",
+    "            data_RD_ref = pd.read_csv(f'../extended_curve/Tmp{ref_temp}K_StrRt{strain_rate}_RD.csv')\n",
+    "            ref_stress_RD = data_RD_ref['Stress']\n",
+    "            \n",
+    "            # Load current temperature stress data for the given strain rate\n",
+    "            data_RD = pd.read_csv(f'../extended_curve/Tmp{temp}K_StrRt{strain_rate}_RD.csv')\n",
+    "            \n",
+    "            # Calculate normalized stress\n",
+    "            normalized_stress_RD = data_RD['Stress'] / ref_stress_RD\n",
+    "            \n",
+    "            if df is None:\n",
+    "                # Initialize DataFrame with strain column if not already done\n",
+    "                df = pd.DataFrame({'strain': data_RD['Strain']})\n",
+    "            \n",
+    "            # Add normalized stress data for the current strain rate as a new column\n",
+    "            df[f'StrRt{strain_rate}'] = normalized_stress_RD\n",
     "\n",
-    "#First set, comment out second set to generate for this one\n",
+    "        # Filter the DataFrame for strain values below 0.08\n",
+    "        df = df[df['strain'] < 0.08]\n",
+    "        \n",
+    "        # Save the DataFrame to a CSV file for the current temperature\n",
+    "        output_file_path = f\"Tmp{temp}_RD_normalized.csv\"\n",
+    "        df.to_csv(output_file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def organise_data(strain_rates, temps):\n",
+    "    ref_temp = '298.15'\n",
+    "    for temp in temps:\n",
+    "        # Initialize DataFrame with strain column for the current temperature\n",
+    "        df = None  # Initialize df to None to handle it dynamically for each temperature\n",
+    "        \n",
+    "        for strain_rate in strain_rates:\n",
+    "            # Load stress data for the current temperature and strain rate\n",
+    "            data_RD = pd.read_csv(f'../extended_curve/Tmp{temp}K_StrRt{strain_rate}_RD.csv')\n",
+    "            \n",
+    "            if df is None:\n",
+    "                # Initialize DataFrame with strain column if not already done\n",
+    "                df = pd.DataFrame({'strain': data_RD['Strain']})\n",
+    "            \n",
+    "            # Add stress data for the current strain rate as a new column\n",
+    "            df[f'StrRt{strain_rate}'] = data_RD['Stress']\n",
+    "\n",
+    "        # Filter the DataFrame for strain values below 0.08\n",
+    "        df = df[df['strain'] < 0.08]\n",
+    "        \n",
+    "        # Save the DataFrame to a CSV file for the current temperature\n",
+    "        output_file_path = f\"Tmp{temp}_RD.csv\"\n",
+    "        df.to_csv(output_file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#First set, not necessary\n",
     "strain_rates = [0.0001]\n",
     "temps = ['77.15', '233.15']\n",
+    "organise_data(strain_rates, temps)\n",
     "\n",
     "#Second set\n",
     "strain_rates = [0.0001, 0.001, 0.01, 0.1]\n",
     "temps = ['373.15', '473.15', '573.15', '673.15']\n",
+    "organise_data(strain_rates, temps)\n",
     "\n",
     "#Third set\n",
     "strain_rates = [0.0001, 0.001, 0.01, 0.1,1]\n",
     "temps = ['298.15']\n",
-    "\n",
-    "\n",
-    "for temp in temps:\n",
-    "    # Initialize DataFrame with strain column for the current temperature\n",
-    "    df = None  # Initialize df to None to handle it dynamically for each temperature\n",
-    "    \n",
-    "    for strain_rate in strain_rates:\n",
-    "        # Load stress data for the current temperature and strain rate\n",
-    "        data_RD = pd.read_csv(f'../extended_curve/Tmp{temp}K_StrRt{strain_rate}_RD.csv')\n",
-    "        \n",
-    "        if df is None:\n",
-    "            # Initialize DataFrame with strain column if not already done\n",
-    "            df = pd.DataFrame({'strain': data_RD['Strain']})\n",
-    "        \n",
-    "        # Add stress data for the current strain rate as a new column\n",
-    "        df[f'StrRt{strain_rate}'] = data_RD['Stress']\n",
-    "\n",
-    "    # Filter the DataFrame for strain values below 0.08\n",
-    "    #df = df[df['strain'] < 0.08]\n",
-    "    \n",
-    "    # Save the DataFrame to a CSV file for the current temperature\n",
-    "    output_file_path = f\"Tmp{temp}_RD.csv\"\n",
-    "    df.to_csv(output_file_path, index=False)\n"
+    "organise_data(strain_rates, temps)"
    ]
   },
   {
@@ -76,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +272,7 @@
    "source": [
     "temperature_file = 'Tmp298.15_RD'\n",
     "strain_rates = [0.0001, 0.001, 0.01, 0.1, 1]\n",
-    "strain_rate_columns = ['StrR0.0001', 'StrR0.001', 'StrR0.01', 'StrR0.1', 'StrR1']\n",
+    "strain_rate_columns = ['StrRt0.0001', 'StrRt0.001', 'StrRt0.01', 'StrRt0.1', 'StrRt1']\n",
     "\n",
     "fit_strain_rate_dependency(temperature_file, strain_rates, strain_rate_columns)"
    ]
@@ -446,7 +494,7 @@
    "source": [
     "temps = ['373.15', '473.15', '573.15', '673.15']\n",
     "strain_rates = [0.0001, 0.001, 0.01, 0.1]\n",
-    "strain_rate_columns = ['StrR0.0001', 'StrR0.001', 'StrR0.01', 'StrR0.1']\n",
+    "strain_rate_columns = ['StrRt0.0001', 'StrRt0.001', 'StrRt0.01', 'StrRt0.1']\n",
     "\n",
     "for temp in temps:\n",
     "    fit_strain_rate_dependency(f\"Tmp{temp}_RD\", strain_rates, strain_rate_columns)"
