--- a/strain_rate_calibration/power_law/power_law.ipynb
+++ b/strain_rate_calibration/power_law/power_law.ipynb
@@ -1,6 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -10,7 +15,7 @@
     "import numpy as np\n",
     "from scipy.optimize import curve_fit\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
