strain rate threshold update

--- a/strain_rate_calibration/student2/student2.ipynb
+++ b/strain_rate_calibration/student2/student2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -856,24 +856,22 @@
      "text": [
       "\n",
       "Temperature File: Parameters_Tmp298.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 1\n",
-      "Percentage of rows with R_squared < 0.95: 1.18%\n",
+      "All R_squared values are >= 0.9.\n",
       "\n",
       "Temperature File: Parameters_Tmp373.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 19\n",
-      "Percentage of rows with R_squared < 0.95: 22.35%\n",
+      "Number of rows with R_squared < 0.9: 16\n",
+      "Percentage of rows with R_squared < 0.9: 18.82%\n",
       "\n",
       "Temperature File: Parameters_Tmp473.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 9\n",
-      "Percentage of rows with R_squared < 0.95: 10.59%\n",
+      "Number of rows with R_squared < 0.9: 9\n",
+      "Percentage of rows with R_squared < 0.9: 10.59%\n",
       "\n",
       "Temperature File: Parameters_Tmp573.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 18\n",
-      "Percentage of rows with R_squared < 0.95: 21.18%\n",
+      "Number of rows with R_squared < 0.9: 5\n",
+      "Percentage of rows with R_squared < 0.9: 5.88%\n",
       "\n",
       "Temperature File: Parameters_Tmp673.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 2\n",
-      "Percentage of rows with R_squared < 0.95: 2.35%\n"
+      "All R_squared values are >= 0.9.\n"
      ]
     }
    ],
@@ -891,7 +889,7 @@
     "    Output:\n",
     "    - Prints the count and percentage of rows with R_squared < threshold for each temperature file.\n",
     "    \"\"\"\n",
-    "    threshold = 0.95\n",
+    "    threshold = 0.90\n",
     "    for temp_file in temperature_files:\n",
     "        # Load the data from the CSV file\n",
     "        df = pd.read_csv(f\"Parameters_{temp_file}_new.csv\")\n",
@@ -935,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1253,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n_/7tqgdxqs259f7cnfxbsjqzwm0000gp/T/ipykernel_29641/2188469682.py:11: RuntimeWarning: divide by zero encountered in power\n",
+      "/var/folders/n_/7tqgdxqs259f7cnfxbsjqzwm0000gp/T/ipykernel_32245/2188469682.py:11: RuntimeWarning: divide by zero encountered in power\n",
       "  return a * np.exp(-b * epsilon**c) + d\n"
      ]
     },
@@ -1422,17 +1420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R-values saved to R_values_Tmp298.15_RD.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.stats import pearsonr\n",
     "\n",
@@ -1483,12 +1473,18 @@
     "temperature_file = 'Tmp298.15_RD'\n",
     "strain_rates = [0.0001, 0.001, 0.01, 0.1, 1]\n",
     "strain_rate_columns = ['ref_StrRt0.0001', 'ref_StrRt0.001', 'ref_StrRt0.01', 'ref_StrRt0.1', 'ref_StrRt1']\n",
-    "validate_original_function(temperature_file, strain_rates, strain_rate_columns)\n"
+    "validate_original_function(temperature_file, strain_rates, strain_rate_columns)\n",
+    "\n",
+    "temps = ['373.15', '473.15', '573.15', '673.15']\n",
+    "strain_rates = [0.0001, 0.001, 0.01, 0.1]\n",
+    "strain_rate_columns = ['ref_StrRt0.0001', 'ref_StrRt0.001', 'ref_StrRt0.01', 'ref_StrRt0.1']\n",
+    "for temp in temps:\n",
+    "    validate_original_function(f\"Tmp{temp}_RD\", strain_rates, strain_rate_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1497,24 +1493,24 @@
      "text": [
       "\n",
       "Temperature File: Parameters_Tmp298.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 27\n",
-      "Percentage of rows with R_squared < 0.95: 31.76%\n",
+      "Number of rows with R_squared < 0.9: 21\n",
+      "Percentage of rows with R_squared < 0.9: 24.71%\n",
       "\n",
       "Temperature File: Parameters_Tmp373.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 27\n",
-      "Percentage of rows with R_squared < 0.95: 31.76%\n",
+      "Number of rows with R_squared < 0.9: 84\n",
+      "Percentage of rows with R_squared < 0.9: 98.82%\n",
       "\n",
       "Temperature File: Parameters_Tmp473.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 27\n",
-      "Percentage of rows with R_squared < 0.95: 31.76%\n",
+      "Number of rows with R_squared < 0.9: 75\n",
+      "Percentage of rows with R_squared < 0.9: 88.24%\n",
       "\n",
       "Temperature File: Parameters_Tmp573.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 27\n",
-      "Percentage of rows with R_squared < 0.95: 31.76%\n",
+      "Number of rows with R_squared < 0.9: 85\n",
+      "Percentage of rows with R_squared < 0.9: 100.00%\n",
       "\n",
       "Temperature File: Parameters_Tmp673.15_RD.csv\n",
-      "Number of rows with R_squared < 0.95: 27\n",
-      "Percentage of rows with R_squared < 0.95: 31.76%\n"
+      "Number of rows with R_squared < 0.9: 37\n",
+      "Percentage of rows with R_squared < 0.9: 43.53%\n"
      ]
     }
    ],
@@ -1530,10 +1526,10 @@
     "    Output:\n",
     "    - Prints the count and percentage of rows with R_squared < threshold for each temperature file.\n",
     "    \"\"\"\n",
-    "    threshold = 0.95\n",
+    "    threshold = 0.90\n",
     "    for temp_file in temperature_files:\n",
     "        # Load the data from the CSV file\n",
-    "        df = pd.read_csv(f\"R_values_{temperature_file}.csv\")\n",
+    "        df = pd.read_csv(f\"R_values_{temp_file}.csv\")\n",
     "        \n",
     "        # Count rows where R_squared is less than the threshold\n",
     "        total_rows = len(df)\n",
