new stress-strain

--- a/strain_rate_calibration/student2/student2.ipynb
+++ b/strain_rate_calibration/student2/student2.ipynb
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
     "            np.where(x <= threshold2, middle_strain, high_strain)\n",
     "        )\n",
     "\n",
-    "    initial_guess_C2 = [1, 1, 1, 1, 1]\n",
+    "    initial_guess_C2 = [1,1,1,1,1]\n",
     "    initial_guess_C4 = [-0.1, -1000, 1000, 0, -0.01, -50, 0.01, -0.05, -500]\n",
     "    # Fit the stretched exponential model to C1\n",
     "    popt_C1, _ = curve_fit(C1_func, strain, C1_values, maxfev=10000000)\n",
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
