--- a/strain_rate_calibration/student2/student2.ipynb
+++ b/strain_rate_calibration/student2/student2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1446,7 @@
     "        return e*epsilon**4 +  a*epsilon**3 + b*epsilon**2 + c*epsilon + d\n",
     "\n",
     "    def C2_func(x, a, b, c, d, e):\n",
-    "        epsilon = 1e-6  # Small shift to handle log(0) issues\n",
+    "        epsilon = 1e-6\n",
     "        x_shifted = x + epsilon\n",
     "        return a * np.log(x_shifted) + b * x_shifted**c + d * np.exp(-e * x_shifted)\n",
     "    \n",
@@ -1507,39 +1507,39 @@
     "\n",
     "# r2_scores now holds the R^2 values for each C1, C2, C3, and C4\n",
     "\n",
-    "    '''\n",
-    "    # Plot C1 vs Strain with stretched exponential fit\n",
+    "    \n",
+    "    # Plot C1 vs Strain \n",
     "    plt.figure(figsize=(10, 5))\n",
     "    plt.plot(strain, C1_values, 'o', label='C1 Data')\n",
-    "    plt.plot(strain, C1_fit, '-', label='C1 Fit (Stretched Exponential)')\n",
+    "    plt.plot(strain, C1_fit, '-', label='C1 Fit')\n",
     "    plt.xlabel('Strain (PEEQ)')\n",
     "    plt.ylabel('C1')\n",
     "    plt.legend()\n",
-    "    plt.title(f\"C1 vs Strain with Stretched Exponential Fit {temp_file} (R^2: {r2_C1:.3f})\")\n",
-    "    plt.show()\n",
-    "    '''\n",
-    "    # Plot C2 vs Strain with stretched exponential fit\n",
-    "    plt.figure(figsize=(10, 5))\n",
-    "    plt.plot(strain, C2_values, 'o', label='C2 Data')\n",
-    "    plt.plot(strain, C2_fit, '-', label='C2 Fit (Stretched Exponential)')\n",
-    "    plt.xlabel('Strain (PEEQ)')\n",
-    "    plt.ylabel('C2')\n",
-    "    plt.legend()\n",
-    "    plt.title(f\"C2 vs Strain with Stretched Exponential Fit {temp_file} (R^2: {r2_scores['C2']:.3f})\")\n",
+    "    plt.title(f\"C1 vs Strain {temp_file} (R^2: {r2_scores['C1']:.3f})\")\n",
     "    plt.show()\n",
     "\n",
     "    '''\n",
-    "     # Plot C3 vs Strain with stretched exponential fit\n",
+    "    # Plot C2 vs Strain \n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(strain, C2_values, 'o', label='C2 Data')\n",
+    "    plt.plot(strain, C2_fit, '-', label='C2 Fit')\n",
+    "    plt.xlabel('Strain (PEEQ)')\n",
+    "    plt.ylabel('C2')\n",
+    "    plt.legend()\n",
+    "    plt.title(f\"C2 vs Strain {temp_file} (R^2: {r2_scores['C2']:.3f})\")\n",
+    "    plt.show()\n",
+    "\n",
+    "     # Plot C3 vs Strain \n",
     "    plt.figure(figsize=(10, 5))\n",
     "    plt.plot(strain, C3_values, 'o', label='C3 Data')\n",
     "    plt.plot(strain, C3_fit, '-', label='C3 Fit (Stretched Exponential)')\n",
     "    plt.xlabel('Strain (PEEQ)')\n",
     "    plt.ylabel('C3')\n",
     "    plt.legend()\n",
-    "    plt.title(f\"C3 vs Strain with Stretched Exponential Fit {temp_file} (R^2: {r2_C3:.3f})\")\n",
+    "    plt.title(f\"C3 vs Strain {temp_file} (R^2: {r2_C3:.3f})\")\n",
     "    plt.show()\n",
     "    \n",
-    "     # Plot C2 vs Strain with stretched exponential fit\n",
+    "     # Plot C2 vs Strain\n",
     "    plt.figure(figsize=(10, 5))\n",
     "    plt.plot(strain, C4_values, 'o', label='C4 Data')\n",
     "    plt.plot(strain, C4_fit, '-', label='C4 Fit')\n",
@@ -1551,12 +1551,13 @@
     "    '''\n",
     "\n",
     "    # Print the fitted parameters for reference\n",
-    "    print(\"Stretched Exponential Fit Parameters for C1:\", popt_C4)\n"
+    "    print(\"Parameters for C2:\", popt_C2)\n",
+    "    print(\"Parameters for C4:\", popt_C4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1584,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stretched Exponential Fit Parameters for C1: [-2.09924962e-02 -8.85777938e+03  1.14622736e+04 -2.18083266e-03\n",
+      "Parameters for C2: [-0.4620175   6.38302255  0.17019126 -3.95847457 -1.09027599]\n",
+      "Parameters for C4: [-2.09924962e-02 -8.85777938e+03  1.14622736e+04 -2.18083266e-03\n",
       "  2.32068524e-02 -3.10914397e+01 -7.74425457e-03 -1.16136982e-02\n",
       " -1.81542456e+02]\n"
      ]
@@ -1610,7 +1612,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stretched Exponential Fit Parameters for C1: [-9.47287646e-02 -2.70981472e+03  2.72114689e+03 -8.87491643e-03\n",
+      "Parameters for C2: [  0.12018406   2.08402966   0.11420915   1.12593729 101.59308242]\n",
+      "Parameters for C4: [-9.47287646e-02 -2.70981472e+03  2.72114689e+03 -8.87491643e-03\n",
       "  5.92406626e+01 -2.87147394e+02 -8.63426931e-03  1.55415750e-02\n",
       " -6.02368294e+01]\n"
      ]
@@ -1637,7 +1640,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stretched Exponential Fit Parameters for C1: [-9.26933180e-02 -7.25726219e+03  7.84127977e+03 -1.00484120e-02\n",
+      "Parameters for C2: [ 0.12365989 -4.69117267  0.47880442  2.27385406 -3.5152454 ]\n",
+      "Parameters for C4: [-9.26933180e-02 -7.25726219e+03  7.84127977e+03 -1.00484120e-02\n",
       " -1.18079876e-04  1.89480289e+01 -1.03938777e-02 -1.70820470e-03\n",
       " -2.81746439e+01]\n"
      ]
@@ -1664,7 +1668,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stretched Exponential Fit Parameters for C1: [-1.05473335e-01 -1.62006036e+03 -3.93131819e-03 -5.45829221e-03\n",
+      "Parameters for C2: [ 0.06365576  1.87342151  0.18581947  0.76746835 36.28359385]\n",
+      "Parameters for C4: [-1.05473335e-01 -1.62006036e+03 -3.93131819e-03 -5.45829221e-03\n",
       "  7.02990624e-03 -1.65204455e+01 -9.91423702e-03 -2.75630729e+01\n",
       " -3.88635338e+04]\n"
      ]
@@ -1693,7 +1698,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stretched Exponential Fit Parameters for C1: [-1.42036878e-02 -5.98724653e+02  9.55788445e+02 -2.77807744e-03\n",
+      "Parameters for C2: [-2.79630397e-01 -1.71464196e+01  2.02353450e+06  5.91709959e+06\n",
+      "  1.24275885e+05]\n",
+      "Parameters for C4: [-1.42036878e-02 -5.98724653e+02  9.55788445e+02 -2.77807744e-03\n",
       "  2.91074980e-02 -2.86329223e+01 -1.22421573e-02 -6.22964156e-01\n",
       " -3.61234105e+02]\n"
      ]
@@ -1717,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
