--- a/sv_fitting.ipynb
+++ b/sv_fitting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e8a00a3f-e218-496d-be95-02ad17a02254",
    "metadata": {
     "tags": []
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "7ba03dc3",
    "metadata": {},
    "outputs": [],
@@ -1047,6 +1047,9 @@
     "\n",
     "strain_rates = [0.0001]\n",
     "temps = ['473.15']\n",
+    "\n",
+    "strain_rates = [0.0001]\n",
+    "temps = ['400C', '500C']\n",
     "\n",
     "#RD-biaxial ratio from Zinan file\n",
     "data_biax = pd.read_csv('data/strain_extended.csv')\n",
@@ -1064,21 +1067,24 @@
     "    #Generate TD, DD, biaxial for all conditions\n",
     "    for temp in temps:\n",
     "        #Read in RD data\n",
-    "        temp_RD = pd.read_csv(f'extended_curve/new/Tmp{temp}K_StrRt{strain_rate}_RD.csv')['Stress']\n",
+    "        temp_RD = pd.read_csv(f'extended_curve/Tmp{temp}_StrRt{strain_rate}_RD.csv')['Stress']\n",
     "        \n",
     "        df = pd.DataFrame({\n",
     "        'strain': data_RD['Strain'],\n",
     "        'RD': temp_RD,\n",
     "        'DD': temp_RD * ratio[0],\n",
     "        'TD': temp_RD * ratio[1],\n",
-    "        'biaxial': temp_RD * ratio[2],\n",
+    "        'biaxial': temp_RD,\n",
     "        'r_RD': r['RD_R_value'],\n",
     "        'r_DD': r['DD_R_value'],\n",
     "        'r_TD': r['TD_R_value']\n",
-    "    })\n",
+    "        })\n",
+    "\n",
+    "        df['biaxial'] = (df['RD'] + 2*df['DD'] + df['TD'])/4\n",
+    "    \n",
     "\n",
     "        # Save the DataFrame to a CSV file\n",
-    "        output_file_path = f\"inp_file/new/Tmp{temp}K_StrRt{strain_rate}.csv\"  # Adjust the filename as needed\n",
+    "        output_file_path = f\"inp_file/Tmp{temp}K_StrRt{strain_rate}.csv\"  # Adjust the filename as needed\n",
     "        df.to_csv(output_file_path, index=False)"
    ]
   },
@@ -1136,7 +1142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3 (v3.11.3:f3909b8bc8, Apr  4 2023, 20:12:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
