--- a/strain_rate_calibration/organise_data.ipynb
+++ b/strain_rate_calibration/organise_data.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,7 @@
     "        for strain_rate in strain_rates:\n",
     "            # Load stress data for the current temperature and strain rate\n",
     "            data_RD = pd.read_csv(f'../extended_curve/Tmp{temp}K_StrRt{strain_rate}_RD.csv')\n",
+    "            data = pd.read_csv(f'../extended_curve/Tmp298.15K_StrRt0.0001_RD.csv')\n",
     "            \n",
     "            if df is None:\n",
     "                # Initialize DataFrame with strain column if not already done\n",
@@ -70,7 +71,7 @@
     "\n",
     "        for strain_rate in strain_rates:\n",
     "            # Add stress data for the current strain rate as a new column\n",
-    "            df[f'ref_StrRt{strain_rate}'] = df[f'StrRt{strain_rate}']/df['StrRt0.0001']\n",
+    "            df[f'ref_StrRt{strain_rate}'] = df[f'StrRt{strain_rate}']/data['Stress']\n",
     "\n",
     "        # Filter the DataFrame for strain values below 0.08\n",
     "        df = df[df['strain'] < 3]\n",
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +102,13 @@
     "temps = ['298.15']\n",
     "organise_data(strain_rates, temps)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
