--- a/strain_rate_calibration/organise_data.ipynb
+++ b/strain_rate_calibration/organise_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +141,9 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
     "temps = ['373.15', '573.15', '673.15']\n",
     "for temp in temps:\n",
     "    w = pd.read_csv(f'wagoner/w_m_values_{temp}.csv')\n",
@@ -148,16 +151,16 @@
     "    s2 = pd.read_csv(f'student2/Parameters_Tmp{temp}_RD_new.csv')\n",
     "\n",
     "    strain = w['PEEQ']\n",
-    "    plt.plot(strain, w['R_squared'])\n",
-    "    plt.plot(strain, s1['R_squared'])\n",
-    "    plt.plot(strain, s2['R_squared'])\n",
+    "    plt.plot(strain, w['R_squared'], label='Wagoner')\n",
+    "    plt.plot(strain, s1['R_squared'], label='2-param')\n",
+    "    plt.plot(strain, s2['R_squared'], label='4-param')\n",
     "    plt.xlabel('PEEQ', fontsize=14)\n",
     "    plt.ylabel('R squared', fontsize=14)\n",
     "    plt.title(f'R squared for {temp}K', fontsize=16, fontweight='bold')\n",
     "    plt.xlim(left=min(strain))\n",
-    "    plt.legend(['Wagoner', '2-param', '4-param'],loc='lower right', fontsize=12)\n",
+    "    plt.legend(loc='lower right', fontsize=12)\n",
     "    plt.tick_params(axis='both', which='major', labelsize=12)\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   }
  ],
