--- a/sv_fitting.ipynb
+++ b/sv_fitting.ipynb
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7ba03dc3",
    "metadata": {},
    "outputs": [],
@@ -1050,6 +1050,9 @@
     "\n",
     "strain_rates = [0.0001]\n",
     "temps = ['400C', '500C']\n",
+    "\n",
+    "strain_rates = [0.0001]\n",
+    "temps = ['737.15K']\n",
     "\n",
     "#RD-biaxial ratio from Zinan file\n",
     "data_biax = pd.read_csv('data/strain_extended.csv')\n",
