--- a/strain_rate_calibration/student2/student2.ipynb
+++ b/strain_rate_calibration/student2/student2.ipynb
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1730,104 +1730,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"None of [Index(['ref_StrRt0.0001', 'ref_StrRt0.001', 'ref_StrRt0.01', 'ref_StrRt0.1'], dtype='object')] are in the [index]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 42\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[39mwith\u001b[39;00m PdfPages(pdf_filename) \u001b[39mas\u001b[39;00m pdf:\n\u001b[1;32m     40\u001b[0m       \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(data)):\n\u001b[1;32m     41\u001b[0m             \u001b[39m# Extract the parameters and stress data for comparison\u001b[39;00m\n\u001b[0;32m---> 42\u001b[0m             stress_values \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39;49miloc[i][strain_rate_columns]\u001b[39m.\u001b[39mvalues\n\u001b[1;32m     43\u001b[0m             strain \u001b[39m=\u001b[39m params_df\u001b[39m.\u001b[39miloc[i][\u001b[39m'\u001b[39m\u001b[39mstrain\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     44\u001b[0m             C1, C2, C3, C4 \u001b[39m=\u001b[39m params_df\u001b[39m.\u001b[39miloc[i][[\u001b[39m'\u001b[39m\u001b[39mC1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mC2\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mC3\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mC4\u001b[39m\u001b[39m'\u001b[39m]]\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/series.py:1072\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1069\u001b[0m     key \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(key, dtype\u001b[39m=\u001b[39m\u001b[39mbool\u001b[39m)\n\u001b[1;32m   1070\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_rows_with_mask(key)\n\u001b[0;32m-> 1072\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_with(key)\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/series.py:1113\u001b[0m, in \u001b[0;36mSeries._get_with\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1110\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39miloc[key]\n\u001b[1;32m   1112\u001b[0m \u001b[39m# handle the dup indexing case GH#4246\u001b[39;00m\n\u001b[0;32m-> 1113\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mloc[key]\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexing.py:1153\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1150\u001b[0m axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39mor\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[1;32m   1152\u001b[0m maybe_callable \u001b[39m=\u001b[39m com\u001b[39m.\u001b[39mapply_if_callable(key, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj)\n\u001b[0;32m-> 1153\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_axis(maybe_callable, axis\u001b[39m=\u001b[39;49maxis)\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexing.py:1382\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1379\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(key, \u001b[39m\"\u001b[39m\u001b[39mndim\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m key\u001b[39m.\u001b[39mndim \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   1380\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCannot index with multidimensional key\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m-> 1382\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_iterable(key, axis\u001b[39m=\u001b[39;49maxis)\n\u001b[1;32m   1384\u001b[0m \u001b[39m# nested tuple slicing\u001b[39;00m\n\u001b[1;32m   1385\u001b[0m \u001b[39mif\u001b[39;00m is_nested_tuple(key, labels):\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexing.py:1322\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_iterable\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1319\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_key(key, axis)\n\u001b[1;32m   1321\u001b[0m \u001b[39m# A collection of keys\u001b[39;00m\n\u001b[0;32m-> 1322\u001b[0m keyarr, indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_listlike_indexer(key, axis)\n\u001b[1;32m   1323\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_reindex_with_indexers(\n\u001b[1;32m   1324\u001b[0m     {axis: [keyarr, indexer]}, copy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, allow_dups\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[1;32m   1325\u001b[0m )\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexing.py:1520\u001b[0m, in \u001b[0;36m_LocIndexer._get_listlike_indexer\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1517\u001b[0m ax \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_axis(axis)\n\u001b[1;32m   1518\u001b[0m axis_name \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_axis_name(axis)\n\u001b[0;32m-> 1520\u001b[0m keyarr, indexer \u001b[39m=\u001b[39m ax\u001b[39m.\u001b[39;49m_get_indexer_strict(key, axis_name)\n\u001b[1;32m   1522\u001b[0m \u001b[39mreturn\u001b[39;00m keyarr, indexer\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexes/base.py:6115\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6112\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   6113\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6115\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   6117\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   6118\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6119\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[0;32m~/Library/Python/3.11/lib/python/site-packages/pandas/core/indexes/base.py:6176\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6174\u001b[0m     \u001b[39mif\u001b[39;00m use_interval_msg:\n\u001b[1;32m   6175\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 6176\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   6178\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[1;32m   6179\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"None of [Index(['ref_StrRt0.0001', 'ref_StrRt0.001', 'ref_StrRt0.01', 'ref_StrRt0.1'], dtype='object')] are in the [index]\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extrapolated stress values saved to Stress_Extrapolated_473.15K.csv.\n"
      ]
     }
    ],
    "source": [
-    "#298.15\n",
-    "C1 = [-3.29596004e-01, -9.51544758e+03, 1.39315621e-03, 1.94297601e+05,\n",
-    "      -2.75853151e+02, -7.74424024e+01, -1.80286840e+02, 7.06129935e-02,\n",
-    "      -1.08975515e-01, 3.58695259e+02, -5.14294392e+00, 6.80068152e+01,\n",
-    "      4.65431679e+02, -2.42242800e+01, 2.30359229e-01, 1.50000000e-03,\n",
-    "      3.80000000e-02]\n",
     "\n",
-    "C2 = [-2.90496051e-01, 6.16643141e+02, 1.21993222e+00, -9.84966406e-01,\n",
-    "      -3.19541143e-02, 2.93586301e-01, 2.75002510e-01, 8.42621674e-01,\n",
-    "      -9.48380560e-02, 8.15150972e-01, 4.08931489e-01, 5.29650559e-01]\n",
+    "C1 = [\n",
+    "    -8.23735520e-01, -3.21124150e+04, 3.50201203e-01, 1.12558008e+06,\n",
+    "    -1.61848397e+03, 7.02124262e-01, -2.00924548e-01, -9.04805111e-01,\n",
+    "    1.22263074e-01, -2.66849185e+01, -1.18313396e+00, -5.92075346e+01,\n",
+    "    4.47497201e+02, 4.48368357e+00, -8.43978925e-02, 1.50000000e-03,\n",
+    "    3.80000000e-02\n",
+    "]\n",
     "\n",
-    "C3 = [-6.08701307e+08, 1.93561505e+06, -1.76986928e+03, 6.01926545e-01,\n",
-    "      -5.79518894e+03, -2.96262586e+01, 1.39895852e+01, -1.53808314e-01,\n",
-    "      3.03780688e+01, -4.74191446e+00, 1.03924069e-01]\n",
+    "C2 = [\n",
+    "    1.47699645e-02, -4.86876323e+00, 5.55396313e-01, 1.56151734e+00,\n",
+    "    -3.17818220e-02, 1.38843372e+04, 4.01423154e+00, 1.16371818e+00,\n",
+    "    -3.18779876e-01, 3.16619726e+00, 3.71200374e-01, -7.59985603e-01\n",
+    "]\n",
     "\n",
-    "C4 = [-2.11805508e-02, -9.09782929e+03, -1.13244066e+04, -1.99799077e-03,\n",
-    "      2.32068525e-02, -3.10914399e+01, -7.74425454e-03, -8.31885264e-03,\n",
-    "      -3.73047166e+02, 3.93149749e+00, 1.35504693e+02, 2.72201806e+00,\n",
-    "      -6.84780995e-02, -2.38635351e-03]\n",
+    "C3 = [\n",
+    "    6.33581498e+08, -2.17011734e+06, 2.13477619e+03, -3.37956146e-01,\n",
+    "    4.55094602e+03, -3.09265375e+02, 5.37886321e+00, 3.44301977e-01,\n",
+    "    2.99549059e+00, 3.88154615e-01, 3.30577369e-01\n",
+    "]\n",
     "\n",
+    "C4 = [\n",
+    "    -2.30800768e-01, -1.04967791e+04, -7.73432274e+03, -9.38066754e-03,\n",
+    "    -4.07611967e-04, 1.18586353e+01, -1.03573295e-02, 1.19837316e+00,\n",
+    "    -1.83765841e+01, 1.31131752e+00, -4.58470496e+00, 2.32431653e+02,\n",
+    "    3.18446069e-02, -1.16855798e+00\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Load strain rates and stress values for extrapolation\n",
+    "strain_rates = [0.0001, 0.001, 0.01, 0.1, 1]  # Example strain rates\n",
     "strain = pd.read_csv('../../extended_curve/Tmp233.15K_StrRt0.0001_RD.csv')['Strain']\n",
     "\n",
+    "# Generate parameter values using provided functions\n",
     "params_df = pd.DataFrame({\n",
-    "        'strain': strain,\n",
-    "        'C1': C1_func(strain,*C1),\n",
-    "        'C2': C2_func(strain,*C2),\n",
-    "        'C3': C3_func(strain,*C3),\n",
-    "        'C4': C4_func(strain,*C4)\n",
+    "    'strain': strain,\n",
+    "    'C1': C1_func(strain, *C1),\n",
+    "    'C2': C2_func(strain, *C2),\n",
+    "    'C3': C3_func(strain, *C3),\n",
+    "    'C4': C4_func(strain, *C4)\n",
+    "})\n",
+    "\n",
+    "# Prepare for saving stress values\n",
+    "stress_results = []\n",
+    "\n",
+    "# Iterate through each row to compute and save stress for different strain rates\n",
+    "for i in range(len(params_df)):\n",
+    "    # Extract strain and parameter values\n",
+    "    current_strain = params_df.iloc[i]['strain']\n",
+    "    C1_val, C2_val, C3_val, C4_val = params_df.iloc[i][['C1', 'C2', 'C3', 'C4']]\n",
+    "    \n",
+    "    # Compute stress for each strain rate\n",
+    "    stress_values = strain_rate_dependent_stress(np.array(strain_rates), C1_val, C2_val, C3_val, C4_val)\n",
+    "    \n",
+    "    # Store results with corresponding strain\n",
+    "    stress_results.append({\n",
+    "        'strain': current_strain,\n",
+    "        **{f'stress_strRt_{sr}': stress for sr, stress in zip(strain_rates, stress_values)}\n",
     "    })\n",
     "\n",
-    "temperature_file = 'Tmp473.15_RD'\n",
-    "# Load the original data and the fitted parameters\n",
-    "data = pd.read_csv(f\"../../extended_curve/Tmp473.15K_StrRt0.0001_RD.csv\")\n",
+    "# Save stress results to a DataFrame and export to CSV\n",
+    "stress_df = pd.DataFrame(stress_results)\n",
+    "output_filename = 'Stress_Extrapolated_473.15K.csv'\n",
+    "stress_df.to_csv(output_filename, index=False)\n",
     "\n",
-    "r_values_list = []  # List to store R-values for each row\n",
-    "\n",
-    "# Create a PDF file to save the plots\n",
-    "pdf_filename = f\"Validation_Plots_{temperature_file}_all.pdf\"\n",
-    "with PdfPages(pdf_filename) as pdf:\n",
-    "      for i in range(len(data)):\n",
-    "            # Extract the parameters and stress data for comparison\n",
-    "            stress_values = data.iloc[i][strain_rate_columns].values\n",
-    "            strain = params_df.iloc[i]['strain']\n",
-    "            C1, C2, C3, C4 = params_df.iloc[i][['C1', 'C2', 'C3', 'C4']]\n",
-    "            # Generate smooth strain rate values for plotting\n",
-    "            plt_sr = np.linspace(min(strain_rates), max(strain_rates), 100)\n",
-    "            plt_stress = strain_rate_dependent_stress(plt_sr, C1, C2, C3, C4)\n",
-    "\n",
-    "            # Compute stress from the original function at discrete strain rates\n",
-    "            fitted_stress = strain_rate_dependent_stress(np.array(strain_rates), C1, C2, C3, C4)\n",
-    "\n",
-    "            # Calculate the R-value (correlation coefficient)\n",
-    "            residuals = stress_values - fitted_stress\n",
-    "            ss_res = np.sum(residuals**2)\n",
-    "            ss_tot = np.sum((stress_values - np.mean(stress_values))**2)\n",
-    "            r_value = 1 - (ss_res / ss_tot)\n",
-    "            r_values_list.append({'Row': strain, 'R_squared': r_value})\n",
-    "\n",
-    "            # Plot only a limited number of rows for visual validation\n",
-    "            plt.figure(figsize=(10, 5))\n",
-    "            plt.plot(strain_rates, stress_values, 'o', label='Original Data')\n",
-    "            plt.plot(plt_sr, plt_stress, '-', label='Fitted Model')\n",
-    "            plt.xlabel('Strain Rate')\n",
-    "            plt.ylabel('Stress')\n",
-    "            plt.title(f'Validation for Row {i} {temperature_file} (R-value = {r_value:.3f})')\n",
-    "            plt.legend()\n",
-    "            plt.grid()\n",
-    "            pdf.savefig()  # Save the current figure to the PDF\n",
-    "            plt.close()  # Close the figure to avoid displaying it multiple times\n",
-    "\n",
-    "# Save R-values to CSV\n",
-    "r_values_df = pd.DataFrame(r_values_list)\n",
-    "r_values_df.to_csv(f\"R_values_{temperature_file}_all.csv\", index=False)\n",
-    "print(f\"Plots saved to {pdf_filename} and R-values saved to CSV.\")"
+    "print(f\"Extrapolated stress values saved to {output_filename}.\")\n"
    ]
   },
   {
@@ -1922,7 +1903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3 (v3.11.3:f3909b8bc8, Apr  4 2023, 20:12:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
