--- a/strain_rate_calibration/student2/student2.ipynb
+++ b/strain_rate_calibration/student2/student2.ipynb
@@ -1812,6 +1812,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the files\n",
+    "file_473_path = 'Stress_Extrapolated_473.15K.csv'\n",
+    "file_298_path = '../../extended_curve/Tmp298.15K_StrRt0.0001_RD.csv'\n",
+    "\n",
+    "# Read the CSV files into pandas DataFrames\n",
+    "data_473 = pd.read_csv(file_473_path)\n",
+    "data_298 = pd.read_csv(file_298_path)\n",
+    "\n",
+    "# Ensure consistent column naming for merging\n",
+    "data_473.rename(columns={\"strain\": \"Strain\"}, inplace=True)\n",
+    "\n",
+    "# Merge the datasets on 'Strain'\n",
+    "merged_data = pd.merge(data_473, data_298, on=\"Strain\", how=\"inner\")\n",
+    "\n",
+    "# Calculate the product of stress values\n",
+    "merged_data[\"Stress_Product\"] = merged_data[\"stress_strRt_0.0001\"] * merged_data[\"Stress\"]\n",
+    "\n",
+    "# Save the result to a new CSV file (optional)\n",
+    "merged_data.to_csv('Stress_Product_Output.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -1902,7 +1931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.3 (v3.11.3:f3909b8bc8, Apr  4 2023, 20:12:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "vscode": {
    "interpreter": {
