--- a/strain_rate_calibration/power_law/power_law.ipynb
+++ b/strain_rate_calibration/power_law/power_law.ipynb
@@ -22,6 +22,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Strain-rate dependent function fit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -125,7 +133,7 @@
     "        plt.ylabel('Normalized Stress')\n",
     "        plt.title(f'Validate real vs Predicted Stress for StrRt {strain_rate}')\n",
     "        plt.legend()\n",
-    "        plt.show()\n"
+    "        plt.show()"
    ]
   },
   {
@@ -648,14 +656,12 @@
     "temp = '298.15'\n",
     "strain_rates = np.array([0.0001, 0.001, 0.01, 0.1, 1])\n",
     "strain_rate_columns = ['ref_StrRt0.0001', 'ref_StrRt0.001', 'ref_StrRt0.01', 'ref_StrRt0.1', 'ref_StrRt1']\n",
-    "\n",
-    "data = pd.read_csv(f\"../Tmp{temp}_RD.csv\")\n",
+    "data = pd.read_csv(f\"../Tmp{temp}_RD.csv\") #Change the name to has _fixed to experiment with fixed reference stress\n",
     "validate_stress(fit_m_function(estimate_m_values(data, strain_rate_columns, strain_rates, temp)), data, strain_rate_columns, strain_rates)\n",
     "\n",
     "temps = ['373.15', '473.15', '573.15', '673.15']\n",
     "strain_rates = np.array([0.0001, 0.001, 0.01, 0.1])\n",
     "strain_rate_columns = ['ref_StrRt0.0001', 'ref_StrRt0.001', 'ref_StrRt0.01', 'ref_StrRt0.1']\n",
-    "\n",
     "for temp in temps:\n",
     "    data = pd.read_csv(f\"../Tmp{temp}_RD.csv\")\n",
     "    validate_stress(fit_m_function(estimate_m_values(data, strain_rate_columns, strain_rates, temp)), data, strain_rate_columns, strain_rates)"
