--- a/strain_rate_calibration/student2/student2.ipynb
+++ b/strain_rate_calibration/student2/student2.ipynb
@@ -204,7 +204,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calibrate C1-C4 based on strain dependent"
+    "# Calibrate C1-C4 based on strain dependent\n",
+    "- There are two options for parameter calibration: with dynamic threshold or fixed threshold."
    ]
   },
   {
